display article => DONE paginate article => DONE search article => DONE article details => DONE article webView => DONE
1. News API.
2. Get for state management.
3. Http instead of Dio for HTTP requests.
4. Intl for date formatting.
5. Cached Network Image for displaying images.
6. Flutter WebView for displaying article content

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,9 +3,8 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     avoid_print: true
-    await_only_futures: true
+    prefer_single_quotes: false
     always_specify_types: true
     prefer_double_quotes: true
-    prefer_single_quotes: false
-    no_logic_in_create_state: false
-
+    await_only_futures: true
+    no_logic_in_create_state: true
