--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: News APP.
 environment: 
   sdk: '>=2.19.5 <3.0.0'
 
-dependencies:
+dependencies: 
   get: 4.6.5
   cupertino_icons: ^1.0.2
   http: ^0.13.5
@@ -27,7 +27,8 @@ dependencies:
   webview_flutter: 4.0.7
   infinite_scroll_pagination: 3.2.0
   flutter_typeahead: 4.3.7
-  flutter:
+  flutter_svg: 2.0.4
+  flutter: 
     sdk: flutter
 
 dev_dependencies: 
@@ -36,8 +37,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
-  uses-material-design: true
-  assets:
+  assets: 
     - assets/assets/
     - assets/assets/splash_screen.svg
+  uses-material-design: true
 
