--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,36 +9,41 @@ dependencies:
   get: 4.6.5
   cupertino_icons: ^1.0.2
   http: ^0.13.5
-  carousel_slider: ^4.2.1
   cached_network_image: 3.2.3
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
   flutter_spinkit: 5.1.0
-  shared_preferences: ^2.0.17
   shimmer: 2.0.0
   google_fonts: 4.0.3
-  badges: ^3.0.2
-  flutter_html: ^3.0.0-alpha.3
   url_launcher: 6.1.10
   intl: 0.18.0
-  flutter_bcrypt: 1.0.8
   flutter_share: 2.0.0
-  modal_progress_hud_nsn: 0.3.0
   webview_flutter: 4.0.7
   infinite_scroll_pagination: 3.2.0
-  flutter_typeahead: 4.3.7
-  flutter_svg: 2.0.4
-  flutter: 
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
+  flutter_launcher_icons: 0.9.0
+  #flutter_launcher_name: 0.0.1
   flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
+    
+
+flutter_icons:
+  image_path: "assets/icons/app_icon.png"
+  android: "app_icon"
+  remove_alpha_ios: true
+  ios: true
+  
+  
+flutter_launcher_name:
+    name: "World News"
 
 flutter: 
-  assets: 
+  uses-material-design: true
+  assets:
     - assets/assets/
     - assets/assets/splash_screen.svg
-  uses-material-design: true
 
